Prueba para subir pagina

--- a/css/style.css
+++ b/css/style.css
@@ -2521,7 +2521,7 @@ ul {
 .banner_part {
   height: 880px;
   position: relative;
-  background-image: url(../img/banner_bg2.png);
+  background-image: url(../img/umm.jpeg);
   background-repeat: no-repeat;
   background-size: 41%;
   background-position:  right;
